# GLSL-Website

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_blog_image_blog_mood.py
home/: urls.py  views.py
static/css/: style.css
static/js/: basic.js  blob.js  index.js  script.js
static/webgl/: fragments.glsl  index.js  vertex.glsl
templates/blog/: blog_home.html  blog_render.html
templates/home/: home.html  test.html
templates/includes/: base.html  navbar.html  shaders.html
website/: settings.py  urls.py
